added some basic classes in the client package

--- a/BulletPOW/client/.gitignore
+++ b/BulletPOW/client/.gitignore
@@ -1,1 +1,9 @@
 /GameGUI.class
+/JoinGameControl.class
+/JoinGamePanel.class
+/GameClient.class
+/GameMenuControl.class
+/GameMenuPanel.class
+/GameControl.class
+/GamePanel.class
+/GameActionData.class
