--- a/BulletPOW/.classpath
+++ b/BulletPOW/.classpath
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/Users/Tanner/Desktop/Java WorkSpaces/Software Engineering/lab8out/mysql-connector-java-5.1.40-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tanner/Desktop/Java WorkSpaces/Software Engineering/lab8out/ocsf.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="D:/uTorrent/Classes/3rd Year/1st Semester/Java/WorkSpaces/networkTesting/networkTesting/mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="D:/uTorrent/Classes/3rd Year/1st Semester/Java/WorkSpaces/networkTesting/networkTesting/ocsf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
