--- a/BulletPOW/.classpath
+++ b/BulletPOW/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="D:/uTorrent/Classes/3rd Year/1st Semester/Java/WorkSpaces/networkTesting/dudeLab7Out/mysql-connector-java-5.1.40-bin.jar"/>
 	<classpathentry kind="lib" path="D:/uTorrent/Classes/3rd Year/1st Semester/Java/WorkSpaces/networkTesting/dudeLab7Out/ocsf.jar"/>
+	<classpathentry kind="lib" path="C:/Users/vince/eclipse-workspace/lab1in/ocsf.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
